--- a/app/src/main/res/layout/activity_bmi_merge_input.xml
+++ b/app/src/main/res/layout/activity_bmi_merge_input.xml
@@ -1,138 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TableRow
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-            <TextView
-                android:text="Date:"
-                android:layout_width="wrap_content"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TableRow
+                android:padding="5dp"
                 android:layout_height="wrap_content"
-                />
-            <EditText
-                android:id="@+id/txtDate"
-                android:hint="Date"
-                android:layout_width="wrap_content"
+                android:layout_width="wrap_content">
+                <TextView
+                    android:text="Date:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <EditText
+                    android:id="@+id/txtDate"
+                    android:hint="Date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+            </TableRow>
+            <TableRow
+                android:padding="5dp"
                 android:layout_height="wrap_content"
-                />
-        </TableRow>
-        <TableRow
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-            <TextView
-                android:text="Weight (lbs.):"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="wrap_content">
+                <TextView
+                    android:text="Weight (lbs.):"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
 
-            <EditText
-                android:id="@+id/txtWeight"
-                android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/txtWeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Weight"
+                    android:inputType="numberDecimal" />
+            </TableRow>
+            <TableRow
+                android:padding="5dp"
                 android:layout_height="wrap_content"
-                android:hint="Weight"
-                android:inputType="numberDecimal" />
-        </TableRow>
-        <TableRow
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-            <include layout="@layout/merge_height"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="BMI: "
-                />
-            <TextView
-                android:id="@+id/txtBmi"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                />
-        </TableRow>
-        <TableRow
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-            <TextView
-                android:text="Classification:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-            <TextView
-                android:id="@+id/txtClassification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark" />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Ideal Weight: "
-                />
-            <TextView
-                android:id="@+id/txtIdealWeight"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Weight to Lose: "
-                />
-            <TextView
-                android:id="@+id/txtIdealWeightToLose"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@android:color/holo_red_dark" />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Ratio: "
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@android:color/holo_red_dark"
-                android:text="1 Lbs. = 3.5K Cal."/>
-        </TableRow>
-        <TableRow>
-            <TextView />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@android:color/holo_red_dark"
-                android:text="75% fat"/>
-        </TableRow>
-        <TableRow>
-            <TextView />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@android:color/holo_red_dark"
-                android:text="25% lean tissue"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Calories to burn: "
-                />
-            <TextView
-                android:id="@+id/txtCaloriesToBurn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@android:color/holo_red_dark"/>
-        </TableRow>
-    </TableLayout>
+                android:layout_width="wrap_content">
+                <include layout="@layout/merge_height"/>
+            </TableRow>
+        </TableLayout>
+        <include layout="@layout/merge_bmi" />
+    </LinearLayout>
 </merge>
