--- a/app/src/main/res/layout/activity_bmr_fragment_read_add_edit.xml
+++ b/app/src/main/res/layout/activity_bmr_fragment_read_add_edit.xml
@@ -1,25 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    >
-    <TableRow
-        android:padding="5dp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
-        <include layout="@layout/activity_bmr_merge_input"/>
-    </TableRow>
-    <TableRow
-        android:padding="5dp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="com.codeflowcrafter.UI.Persistency.Fragment_SaveCancel"
-            android:id="@+id/saveCancelFragmentPlaceholder"
-            android:gravity="bottom"
-            tools:layout="@layout/fragment_savecancel_layout" />
-    </TableRow>
-</TableLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+            <include layout="@layout/activity_bmr_merge_input" />
+        </TableRow>
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+            <fragment
+                android:id="@+id/saveCancelFragmentPlaceholder"
+                android:name="com.codeflowcrafter.UI.Persistency.Fragment_SaveCancel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                tools:layout="@layout/fragment_savecancel_layout" />
+        </TableRow>
+    </TableLayout>
+
+    <include layout="@layout/merge_bmi" />
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Ideal BMR: " />
+            <TextView
+                android:id="@+id/txtIdealBmr"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/holo_red_dark" />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Ideal daily calories needed: " />
+
+            <TextView
+                android:id="@+id/txtIdealCaloriesNeeded"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/holo_red_dark" />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Ideal days to burn calories: " />
+            <TextView
+                android:id="@+id/txtIdealCaloriesToBurn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/holo_red_dark" />
+        </TableRow>
+    </TableLayout>
+</LinearLayout>
