--- a/app/src/main/res/layout/merge_bmi.xml
+++ b/app/src/main/res/layout/merge_bmi.xml
@@ -62,40 +62,73 @@
         </TableRow>
 
         <TableRow>
+            <TableLayout android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Ratio: " />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="1 Lbs. = 3.5K Cal."
+                        android:textColor="@android:color/holo_red_dark" />
+                </TableRow>
+                <TableRow>
+                    <TextView />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="75% fat"
+                        android:textColor="@android:color/holo_red_dark" />
+                </TableRow>
+                <TableRow>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Ratio: " />
+                    <TextView />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="1 Lbs. = 3.5K Cal."
-                android:textColor="@android:color/holo_red_dark" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="25% lean tissue"
+                        android:textColor="@android:color/holo_red_dark" />
+                </TableRow>
+            </TableLayout>
+            <TableLayout android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="     " />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Carbs. 1g = 4 Cal."
+                        android:textColor="@color/colorPrimaryDark" />
+                </TableRow>
+                <TableRow>
+                    <TextView />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Fat 1g = 9 Cal."
+                        android:textColor="@color/colorPrimaryDark" />
+                </TableRow>
+                <TableRow>
+                    <TextView />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Protein 1g = 4 Cal. "
+                        android:textColor="@color/colorPrimaryDark" />
+                </TableRow>
+            </TableLayout>
         </TableRow>
 
-        <TableRow>
-
-            <TextView />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="75% fat"
-                android:textColor="@android:color/holo_red_dark" />
-        </TableRow>
-
-        <TableRow>
-
-            <TextView />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="25% lean tissue"
-                android:textColor="@android:color/holo_red_dark" />
-        </TableRow>
 
         <TableRow>
             <TextView
