Make editable rate

--- a/app/src/main/res/layout/activity_heart_rate_counter.xml
+++ b/app/src/main/res/layout/activity_heart_rate_counter.xml
@@ -75,11 +75,12 @@
                 android:layout_height="wrap_content"
                 android:text="Heart Rate: " />
 
-            <TextView
+            <EditText
                 android:id="@+id/txtHeartRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:gravity="center"
+                android:inputType="number" />
         </TableRow>
 
         <TableRow
