Added recovery counter

--- a/app/src/main/res/layout/activity_ehr_merge_input.xml
+++ b/app/src/main/res/layout/activity_ehr_merge_input.xml
@@ -124,6 +124,12 @@
                 android:gravity="top|center"
                 android:hint="[Click Here]"
                 android:inputType="number" />
+
+            <Button
+                android:id="@+id/btnRest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rest\n(2 min.)" />
         </TableRow>
 
     </TableLayout>
